--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,20 @@
-image: maven:3.8.1-jdk-8
+stages:
+  - build
+  - deploy
 
 variables:
-  MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
-
-cache:
-  paths:
-    - .m2/repository
+  MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
+  NEXUS_REPO_ID: "nexus-repo"
 
 build:
   stage: build
   script:
-    - mvn clean install
+    - mvn $MAVEN_CLI_OPTS clean package
+
+deploy:
+  stage: deploy
+  script:
+    - mvn $MAVEN_CLI_OPTS deploy
+  only:
+    - master
 
