--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,32 @@
 stages:
   - build
+  - test
   - deploy
 
 variables:
-  MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
-  NEXUS_REPO_ID: "nexus-repo"
+  MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
+  TOMCAT_HOST: "83.83.42.214"
+  TOMCAT_PORT: "http://localhost:8080/"
+  TOMCAT_USERNAME: "admin1"
+  TOMCAT_PASSWORD: "admin1"
+
+before_script:
+  - dnf update -y
+  - dnf install -y maven
 
 build:
   stage: build
   script:
-    - mvn $MAVEN_CLI_OPTS clean package
+    - mvn clean compile
+
+test:
+  stage: test
+  script:
+    - mvn test
 
 deploy:
   stage: deploy
   script:
-    - mvn $MAVEN_CLI_OPTS deploy
-  only:
-    - master
+    - mvn package
+    - cp /home/andychen/devoteam-traineeship-petclinic/target/petclinic.war /opt/apache-tomcat-9.0.76/webapps
 
