Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,33 +1,37 @@
+image: maven:3-jdk-11
+
 stages:
   - build
+  - test
+  - deploy
 
 variables:
-  # This will suppress any download for dependencies and plugins or upload messages which would clutter the console log.
-  # `showDateTime` will show the passed time in milliseconds. You need to specify `--batch-mode` to make this work.
-  MAVEN_OPTS: >-
-    -Dhttps.protocols=TLSv1.2
-    -Dmaven.repo.local=.m2/repository
-    -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN
-    -Dorg.slf4j.simpleLogger.showDateTime=true
-    -Djava.awt.headless=true
-  # As of Maven 3.3.0 instead of this you may define these options in `.mvn/maven.config` so the same config is used
-  # when running from the command line.
-  # `installAtEnd` and `deployAtEnd` are only effective with recent version of the corresponding plugins.
-  MAVEN_CLI_OPTS: >-
-    --batch-mode
-    --errors
-    --fail-at-end
-    --show-version
-    -DinstallAtEnd=true
-    -DdeployAtEnd=true  
+  MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
+  TOMCAT_HOST: "83.83.42.214"
+  TOMCAT_PORT: "http://localhost:8080/"
+  TOMCAT_USERNAME: "admin1"
+  TOMCAT_PASSWORD: "admin1"
 
-java-build:
-  # select the most appropriate image for your project
-  image: maven:3.8-openjdk-11
+before_script:
+  - dnf update -y
+  - dnf install -y maven
+
+build:
   stage: build
-  # Cache downloaded dependencies and plugins between builds.
-  # The key here separates one cache per branch/tag ($CI_COMMIT_REF_SLUG)
-  cache:
-    key: "maven-$CI_COMMIT_REF_SLUG"
-    paths:
-      - .m2/repository
+  script: "mvn install -B"
+  script:
+    - mvn clean package
+
+test:
+  stage: test
+  script:
+    - mvn test
+
+deploy:
+  stage: deploy
+  script:
+    - mvn package
+    - cp /home/andychen/devoteam-traineeship-petclinic/target/petclinic.war /opt/apache-tomcat-9.0.76/webapps
+     - echo "Deploying to production server"
+    - curl --upload-file /home/andychen/devoteam-traineeship-petclinic/target/petclinic.war  "http://$admin1:$admin1@$83.83.42.214:$TOMCAT_PORT/manager/text/deploy?/home/andychen/devoteam-traineeship-petclinic/target/petclinic.war&update=true"
+
