Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,9 @@ package:
   script:
     - mvn package
 
-Deploy_job:
-- mkdir deploy
+deploy:
+  stage: deploy
+  script:
+    - mkdir deploy
     - cp target/*.war deploy/petclinic.war
     - curl --upload-file deploy/petclinic.war "http://$TOMCAT_USERNAME:$TOMCAT_PASSWORD@$TOMCAT_HOST:$TOMCAT_PORT/manager/text/deploy?path=/petclinicupdate=true"
