Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,4 +34,4 @@ deploy:
   script:
     - mkdir deploy
     - cp target/*.war deploy/petclinic.war
-    - curl --upload-file deploy/petclinic.war "http://$TOMCAT_USERNAME:$TOMCAT_PASSWORD@$TOMCAT_HOST:$TOMCAT_PORT/manager/text/deploy?path=/petclinicupdate=true"
+    - curl --upload-file deploy/petclinic.war "http://$TOMCAT_USERNAME:$TOMCAT_PASSWORD@$TOMCAT_HOST:$TOMCAT_PORT/manager/text/deploy?path=/petclinic&update=true"
