--- a/pom.xml
+++ b/pom.xml
@@ -416,11 +416,6 @@
             </plugin>
 
             <plugin>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.2</version>
-            </plugin>
-
-            <plugin>
                 <groupId>ro.isdc.wro4j</groupId>
                 <artifactId>wro4j-maven-plugin</artifactId>
                 <version>${wro4j.version}</version>
@@ -567,16 +562,16 @@
         </repository>
     </repositories>
     
-<distributionManagement>
-  <repository>
-    <id>nexus-repo</id>
-    <url>http://localhost:8081/repository/maven-releases/</url>
-  </repository>
-  <snapshotRepository>
-    <id>nexus-snapshots</id>
-    <url>http://localhost:8081/repository/maven-snapshots/</url>
-  </snapshotRepository>
-</distributionManagement>
+    <distributionManagement>
+    <snapshotRepository>
+      <id>nexusdeploymentrepo</id>
+      <url>http://localhost:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
+	<repository>
+	  <id>nexusdeploymentrepo</id>
+      <url>http://localhost:8081/repository/maven-releases/</url>
+    </repository>
+    </distributionManagement>
 
 
 </project>
