--- a/pom.xml
+++ b/pom.xml
@@ -564,11 +564,11 @@
     
     <distributionManagement>
     <snapshotRepository>
-      <id>nexusdeploymentrepo</id>
+      <id>nexus-snapshot</id>
       <url>http://localhost:8081/repository/maven-snapshots/</url>
     </snapshotRepository>
 	<repository>
-	  <id>nexusdeploymentrepo</id>
+	  <id>nexus-release</id>
       <url>http://localhost:8081/repository/maven-releases/</url>
     </repository>
     </distributionManagement>
