--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.springframework.samples</groupId>
     <artifactId>petclinic</artifactId>
-    <version>5.3.8</version>
+    <version>5.3.8-SNAPSHOT</version>
 
     <name>petclinic</name>
     <packaging>war</packaging>
