--- a/pom.xml
+++ b/pom.xml
@@ -564,7 +564,7 @@
     
     <distributionManagement>
     <snapshotRepository>
-      <id>nexus-snapshot</id>
+      <id>nexus-snapshots</id>
       <url>http://localhost:8081/repository/maven-snapshots/</url>
     </snapshotRepository>
 	<repository>
