--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# Maven
-# Build your Java project and run tests with Apache Maven.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/java
-
 trigger:
   branches:
     include:
@@ -49,3 +44,29 @@ stages:
         steps:
           - script: mvn tomcat7:deploy
 
+  - stage: load_test
+    displayName: 'Load Test'
+    jobs:
+      - job: load_test
+        displayName: 'JMeter Load Test Job'
+        pool: Petclinic
+        steps:
+          - task: DownloadBuildArtifacts@0
+            displayName: 'Download Artifacts'
+            inputs:
+              buildType: 'specific'
+              project: 'petclinic-devo'
+              pipeline: <azure-pipelines.yml>
+              buildVersionToDownload: 'latest'
+              artifactName: 'jmeter-artifact'
+              downloadPath: '$(Pipeline.Workspace)'
+
+          - script: 'jmeter -n -t $(Pipeline.Workspace)/home/andychen/Documents/Jmeter/apache-jmeter-5.6.2/bin/load_test.jmx -l $(Pipeline.Workspace)/results.jtl'
+            displayName: 'Run JMeter Tests'
+
+          - task: PublishTestResults@2
+            displayName: 'Publish JMeter Test Results'
+            inputs:
+              testResultsFormat: 'JUnit'
+              testResultsFiles: '$(Pipeline.Workspace)/results.jtl'
+              failTaskOnFailedTests: true
