--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,7 +61,7 @@ stages:
               cp $(Pipeline.Workspace)/load-test-repo/load-test.jmx $(Pipeline.Workspace)/load-test.jmx
 
               # Install JMeter on a Linux-based Fedora agent
-              sudo dnf install -y jmeter
+              dnf install -y jmeter
 
               # Run the JMeter load test
               jmeter -n -t $(Pipeline.Workspace)/load-test.jmx -l $(Pipeline.Workspace)/results.jtl
