--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,14 +57,8 @@ stages:
             inputs:
               script: |
                 # Run the JMeter load test using the locally installed JMeter
-                jmeter -Jmeter.save.saveservice.output_format=xml -n -t $(Pipeline.Workspace)/load-test-repo/load-test.jmx -l $(Pipeline.Workspace)/results.jtl
-
-          - task: PublishTestResults@2
-            displayName: 'Publish JMeter Test Results'
-            inputs:
-              testResultsFormat: 'JUnit'
-              testResultsFiles: '$(Pipeline.Workspace)/results.jtl'
-              failTaskOnFailedTests: true
+                jmeter -Jmeter.save.saveservice.output_format=xml -n -t $(Pipeline.Workspace)/load-test-repo/load-test.jmx -l $(Pipeline.Workspace)/results.jtl | tee $(Pipeline.Workspace)/jmeter_console_output.log
+              
               
               
 
