--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -100,7 +100,7 @@ stages:
         steps:
           - script: |
               python /home/andychen/devoteam-traineeship-petclinic/selenium-test.py
-              pip install -r requirements.txt  # Install test dependencies
+              pip install -r requirements.txt
               pytest --html=report.html
           - task: PublishTestResults@2
             displayName: 'Publish Selenium Test Results'
