Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,6 +68,11 @@ stages:
             displayName: 'Run JMeter Locally'
             inputs:
               script: |
+                # Remove old jmeter_report before running
+                rm -rf $(Pipeline.Workspace)/jmeter_report
+
+                displayName: 'Clean Up Old JMeter Reports'
+                
                 # Run the JMeter load test using the locally installed JMeter
                 jmeter -Jmeter.save.saveservice.output_format=xml -n -t $(Pipeline.Workspace)/load-test-repo/load-test.jmx -l $(Pipeline.Workspace)/results.jtl -e -o $(Pipeline.Workspace)/jmeter_report
               
